Adding modified changes

--- a/force-app/main/default/classes/BatchToCreateScoringForAwards.cls
+++ b/force-app/main/default/classes/BatchToCreateScoringForAwards.cls
@@ -1,19 +1,20 @@
-global class BatchToCreateScoringForAwards implements Database.Batchable<sObject> {
-    Map<String,Reward_And_Recognition__c> recordHistoryMap = new  Map<String,Reward_And_Recognition__c>();
+global class BatchToCreateScoringForAwards implements Database.Batchable<sObject>, Database.Stateful {
+    private Map<String,Reward_And_Recognition__c> recordHistoryMap = new  Map<String,Reward_And_Recognition__c>();
     global Database.QueryLocator start(Database.BatchableContext BC) {
          Id nomRecordTypeId = Schema.SObjectType.Reward_And_Recognition__c.getRecordTypeInfosByName().get('Nominations').getRecordTypeId();
          return Database.getQueryLocator([SELECT Id,Status__c,Award_Type__c,Resource__c,Primary_Nomination__c,
                                           Secondary_Nomination__c,Recognization_By__c,Recognization_By__r.Name,Reason_for_award__c 
                                           FROM Reward_And_Recognition__c WHERE Status__c = 'Nominated'
+                                          and Processed__c = false
                                           and RecordTypeId=:nomRecordTypeId and Type__c = 'Annual Award']);
     }
     global void execute(Database.BatchableContext BC, List<Reward_And_Recognition__c> rrList) {
        Fiscal_Year__c currentFY = [SELECT Id,Name,Start_Date__c,End_Date__c FROM Fiscal_Year__c where Start_Date__c = THIS_FISCAL_YEAR Order BY Start_Date__c ASC];
-        List<Reward_And_Recognition__c> scoringInsert = new List<Reward_And_Recognition__c>(); 
-         List<Reward_And_Recognition__c> scoringUpdate = new List<Reward_And_Recognition__c>(); 
+        //smaske : PM_Def_056 : storing records in nominationsUpdate to update the Processed__c checkbox to true
+        List<Reward_And_Recognition__c> nominationsUpdate = new List<Reward_And_Recognition__c>(); 
+        
         Map<String, List<Reward_And_Recognition__c>>  awardWithNomnMap = new Map<String, List<Reward_And_Recognition__c>>();
         Map<String, Map<String,List<Reward_And_Recognition__c>>>  awardresourceWithNomnMap = new Map<String, Map<String,List<Reward_And_Recognition__c>>>();
-        Map<String, Reward_And_Recognition__c>  scoringWithNomnMap = new Map<String, Reward_And_Recognition__c>();
         set<Id> contactIds = new set<Id>();
         for(Reward_And_Recognition__c rr : rrList){
             contactIds.add(rr.Resource__c);
@@ -21,7 +22,9 @@ global class BatchToCreateScoringForAwards implements Database.Batchable<sObject
                 awardWithNomnMap.get(rr.Award_Type__c).add(rr);
             }else{
                 awardWithNomnMap.put(rr.Award_Type__c, new List<Reward_And_Recognition__c>{rr});  
-            } 
+            }
+            rr.Processed__c = true;
+            nominationsUpdate.add(rr);
         }
         system.debug(awardWithNomnMap.size()+'===awardWithNomnMap===='+awardWithNomnMap);
          system.debug(contactIds.size()+'===contactIds===='+contactIds);
@@ -41,16 +44,20 @@ global class BatchToCreateScoringForAwards implements Database.Batchable<sObject
         
         Id scoringRecordTypeId = Schema.SObjectType.Reward_And_Recognition__c.getRecordTypeInfosByName().get('Scoring').getRecordTypeId();
         //fetch scoring records only for current fiscal year via lookup : currentFY
-        for(Reward_And_Recognition__c score : [SELECT Id,Award_Type__c,Resource__c,Fiscal_Year__c FROM Reward_And_Recognition__c WHERE Resource__c IN:contactIds and  RecordTypeId=:scoringRecordTypeId and Status__c = 'Review In Progress' and Fiscal_Year__c =: currentFY.Id ] ){
-           String uniqueKey = score.Resource__c+';'+score.Award_Type__c;
-           scoringWithNomnMap.put(uniqueKey,score);
+        for(Reward_And_Recognition__c score : [SELECT Id,Award_Type__c,Resource__c,Fiscal_Year__c,of_Primary_Nominations__c,of_Secondary_Nominations__c FROM Reward_And_Recognition__c WHERE Resource__c IN:contactIds and  RecordTypeId=:scoringRecordTypeId and Status__c = 'Review In Progress' and Fiscal_Year__c =: currentFY.Id ] ){
+           String uniqueKey = score.Resource__c+';'+score.Award_Type__c; 
             recordHistoryMap.put(uniqueKey,score);
+            System.debug('====score record===='+score);
+            System.debug('====recordHistoryMap===='+recordHistoryMap);            
         }
-        system.debug(scoringWithNomnMap.size()+'===scoringWithNomnMap===='+scoringWithNomnMap);
+        system.debug(recordHistoryMap.size()+'===recordHistoryMap===='+recordHistoryMap);
         
         for(String award : awardresourceWithNomnMap.keySet()){
+            system.debug('===award===='+award);
              Map<String,List<Reward_And_Recognition__c>> resMap = awardresourceWithNomnMap.get(award);
+            system.debug('===resMap===='+resMap);
             for(String resource : resMap.keySet()){
+                 system.debug('===resource Id===='+resMap);
                 Decimal noOfPrimary = 0;
                 Decimal noOfSecondary = 0;
                 String amendComments = '';
@@ -81,12 +88,11 @@ global class BatchToCreateScoringForAwards implements Database.Batchable<sObject
                  String uniqueKey = resource+';'+award; 
                   if(recordHistoryMap.containsKey(uniqueKey)){
                       Reward_And_Recognition__c scrr = recordHistoryMap.get(uniqueKey);
-                      //scrr.Id = scoringWithNomnMap.get(uniqueKey).Id;
-                      scrr.of_Primary_Nominations__c = noOfPrimary;
-                      scrr.of_Secondary_Nominations__c = noOfSecondary;
-                      scrr.Reason_for_award__c = amendComments;
-                      scrr.Recognization_By_Text__c = amendRec;
-                      //scoringUpdate.add(scrr); 
+                      system.debug('===scrr existing scoring=='+scrr);
+                      scrr.of_Primary_Nominations__c =  scrr.of_Primary_Nominations__c+noOfPrimary;
+                      scrr.of_Secondary_Nominations__c = scrr.of_Secondary_Nominations__c+noOfSecondary;
+                      scrr.Reason_for_award__c = '<br/>'+amendComments;
+                      scrr.Recognization_By_Text__c = '<br/>'+amendRec;  
                       recordHistoryMap.put(uniqueKey,scrr);
                   }else{
                      Reward_And_Recognition__c scrr = new Reward_And_Recognition__c();
@@ -98,33 +104,31 @@ global class BatchToCreateScoringForAwards implements Database.Batchable<sObject
                       scrr.of_Secondary_Nominations__c = noOfSecondary;
                       scrr.Reason_for_award__c = amendComments;
                       scrr.Fiscal_Year__c = CurrentFY.Id;
-                      scrr.Recognization_By_Text__c = amendRec;
-                      //scoringInsert.add(scrr);
-                      recordHistoryMap.put(uniqueKey,scrr);
-                      system.debug('==scrr===='+scrr); 
+                      scrr.Recognization_By_Text__c = amendRec; 
+                      recordHistoryMap.put(uniqueKey,scrr); 
                   }
  
             }
             
-        } 
-                                
-        system.debug('==scoringInsert===='+scoringInsert); 
-        system.debug('==scoringUpdate===='+scoringUpdate); 
+        }
         
-        /*try{
-            update scoringUpdate;
-            insert scoringInsert;
-          
+        try{
+            if(nominationsUpdate.size() > 0){
+                system.debug('==nominationsUpdate.values===='+ nominationsUpdate.toString() ); 
+                update nominationsUpdate;
+            }
         }catch(exception ex){
            LogException.logHandledException(ex, 'BatchToCreateKRAforQuaterly', 'execute');  
-        }*/
+        }
+                                
     }
     
     global void finish(Database.BatchableContext BC) {
         try{
+            system.debug('==recordHistoryMap.values===='+recordHistoryMap.values()); 
             upsert recordHistoryMap.values();
         }catch(exception ex){
-           LogException.logHandledException(ex, 'BatchToCreateKRAforQuaterly', 'execute');  
+           LogException.logHandledException(ex, 'BatchToCreateKRAforQuaterly', 'finish');  
         }
         
     }
